--- a/index.html
+++ b/index.html
@@ -75,6 +75,54 @@
       font-size: 0.9rem;
       color: #ff2e75;
     }
+
+    /* Popup */
+    .popup {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      justify-content: center;
+      align-items: center;
+    }
+    .popup-content {
+      position: relative;
+      background: white;
+      padding: 0;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(255, 105, 180, 0.5);
+      max-width: 400px;
+    }
+    .popup-content img {
+      width: 100%;
+      border-radius: 20px;
+    }
+    .popup-text {
+      position: absolute;
+      bottom: 50px;  /* ปรับตำแหน่งข้อความให้อยู่บริเวณปากในภาพ */
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 1.8rem;
+      color: white;
+      font-weight: bold;
+      text-shadow: 2px 2px 10px #000;
+    }
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 1.5rem;
+      color: white;
+      background: rgba(0,0,0,0.4);
+      padding: 5px 10px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+    .close-btn:hover {
+      background: rgba(0,0,0,0.7);
+    }
   </style>
 </head>
 <body>
@@ -95,7 +143,7 @@
       and every heartbeat that makes our love real. I love you deeply, more than words could ever say. 🫶
     </p>
     <div class="heart">❤️</div>
-    <button onclick="showMessage()">💌 Press for a little surprise 💌</button>
+    <button onclick="openPopup()">💌 Press for a little surprise 💌</button>
   </div>
 
   <footer>
@@ -103,17 +151,21 @@
     — Fern & Jess 💞
   </footer>
 
+  <!-- Popup Surprise -->
+  <div class="popup" id="popup">
+    <div class="popup-content">
+      <span class="close-btn" onclick="closePopup()">✖</span>
+      <img src="IMG_20240911_213444_301.jpg" alt="Love Image">
+      <div class="popup-text">I LOVE U 💖</div>
+    </div>
+  </div>
+
   <script>
-    function showMessage() {
-      const messages = [
-        "You’re my everything, no matter how hard things get 🫶",
-        "Every fight only proves how much we care and love each other 💕",
-        "Thank you for staying, for loving, for believing in us ✨",
-        "You and I, always and forever 💖",
-        "Even the stars can’t outshine the love I have for you 🌟"
-      ];
-      const random = messages[Math.floor(Math.random() * messages.length)];
-      alert(random);
+    function openPopup() {
+      document.getElementById("popup").style.display = "flex";
+    }
+    function closePopup() {
+      document.getElementById("popup").style.display = "none";
     }
   </script>
 </body>
