--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     }
     .popup-text {
       position: absolute;
-      bottom: 50px;  /* ปรับตำแหน่งข้อความให้อยู่บริเวณปากในภาพ */
+      bottom: 50px;  /* ตำแหน่งข้อความ */
       left: 50%;
       transform: translateX(-50%);
       font-size: 1.8rem;
@@ -155,7 +155,7 @@
   <div class="popup" id="popup">
     <div class="popup-content">
       <span class="close-btn" onclick="closePopup()">✖</span>
-      <img src="IMG_20240911_213444_301.jpg" alt="Love Image">
+      <img src="love.jpg" alt="Love Image">
       <div class="popup-text">I LOVE U 💖</div>
     </div>
   </div>
